<resources>
    <!-- Configurazione API TMDB -->
    <string name="tmdb_api_key">854938d42be4125ce84812f957f4f8b5</string>
    <string name="tmdb_base_url">https://api.themoviedb.org/3/</string>

    <!-- Configurazione API Giphy -->
    <string name="giphy_api_key">49ChsckPtw8bgXsJfyLHGC9TLm1clE5L</string>
    <string name="giphy_base_url">https://api.giphy.com/v1/</string>

    <!-- Informazioni sull'app -->
    <string name="app_name">Movie Hunter</string>
    <string name="logo_description">logo_description</string>
    <string name="final_thanks">Grazie per aver scelto Movie Hunter!</string>

    <!-- Film e immagini -->
    <string name="movie_image_desc">Film poster</string>
    <string name="movie_poster">movie_poster</string>
    <string name="movie_background">movie_background</string>
    <string name="background_desc">background_desc</string>
    <string name="film_title">Titolo</string>
    <string name="filmdesc">Panoramica</string>

    <!-- GIF -->
    <string name="giphy_section">GIF Popolari</string>
    <string name="giphy_description">giphy_description</string>
    <string name="gif_image_desc">gif_image_desc</string>

    <!-- Navigazione -->
    <string name="back_btn">Indietro</string>
    <string name="homepage_btn">Home</string>
    <string name="search_placeholder">Cerca film</string>
    <string name="back_btn_text">Indietro</string>

    <!-- Autenticazione -->
    <string name="password_visibility">Mostra password</string>
    <string name="login_btn">Accedi</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <!-- Acquisti e pagamenti -->
    <string name="buy_btn">Acquista</string>
    <string name="price">€4.99</string>
    <string name="shipment_address">Indirizzo di spedizione</string>
    <string name="shipment_placeholder">Viale G. Matteotti 593</string>
    <string name="payment_desc">Pagamento alla consegna</string>
    <string name="delivery_desc">La preparazione del tuo ordine è iniziata. La consegna avverrà entro 3 giorni lavorativi</string>

    <!-- Condivisione e contatti -->
    <string name="share_btn">Condividi</string>
    <string name="first_name">Nome</string>
    <string name="last_name">Cognome</string>
    <string name="phone_number">Numero di telefono</string>
    <string name="contact_icon_desc">contact_icon_description</string>
    <string name="contacts">Contatti</string>
    <string name="send_desc">Inviato a</string>

    <!-- Fotografia -->
    <string name="take_photo_desc">take_photo_desc</string>
    <string name="take_photo_btn">Scatta foto</string>

</resources>
