<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_image"
        android:contentDescription="@string/movie_background"
        android:scaleType="centerCrop" />

    <ImageView
        android:id="@+id/poster_image"
        android:layout_width="144dp"
        android:layout_height="186dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/movie_image_desc"/>

    <RelativeLayout
        android:layout_width="330dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/poster_image"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_box"
        android:padding="@dimen/padding_5dp">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_marginBottom="@dimen/marginBottom_8dp"
            android:fontFamily="@font/gg_sans_bold"
            android:text="@string/film_title"
            android:textAppearance="?attr/textAppearance"
            android:textColor="@color/low_opacity_black"
            android:textSize="@dimen/textSize_18sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_text_view"
            android:scrollbars="none"
            android:fillViewport="true"
            android:layout_above="@+id/price_text_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="@dimen/marginEnd_10dp"
                android:paddingStart="@dimen/marginStart_10dp">

                <TextView
                    android:id="@+id/description_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="@dimen/marginBottom_16dp"
                    android:paddingBottom="4dp"
                    android:fontFamily="@font/gg_sans_regular"
                    android:gravity="center_horizontal"
                    android:text="@string/filmdesc"
                    android:textAppearance="?attr/textAppearance"
                    android:textSize="@dimen/textSize_14sp" />

                <TextView
                    android:id="@+id/gifs_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="@dimen/marginBottom_8dp"
                    android:fontFamily="@font/gg_sans_bold"
                    android:gravity="center"
                    android:text="@string/giphy_section"
                    android:textAppearance="?attr/textAppearance"
                    android:textColor="@color/low_opacity_black"
                    android:textSize="@dimen/textSize_18sp">

                </TextView>

                <!-- RecyclerView per le gif -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/gif_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:scrollbars="none"
                    android:layout_marginBottom="@dimen/marginBottom_8dp"/>

            </LinearLayout>

        </ScrollView>

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/gg_sans_bold"
            android:gravity="center_horizontal"
            android:text="@string/price"
            android:textAppearance="?attr/textAppearance"
            android:textColor="@color/transparent_sky"
            android:textSize="@dimen/textSize_14sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/marginBottom_5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <!-- Share Button -->
        <Button
            android:id="@+id/share_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent_sky"
            android:fontFamily="@font/gg_sans_regular"
            android:text="@string/share_btn"
            android:textAllCaps="false"
            android:layout_marginHorizontal="8dp"
            android:textColor="@color/white" />

        <!-- Proceed Button -->
        <Button
            android:id="@+id/proceed_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent_sky"
            android:fontFamily="@font/gg_sans_regular"
            android:text="@string/buy_btn"
            android:textAllCaps="false"
            android:layout_marginHorizontal="8dp"
            android:textColor="@color/white" />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_0dp"
            android:visibility="gone" />
    </LinearLayout>
</RelativeLayout>
