<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image"
    android:padding="@dimen/padding_16dp">

    <!-- Logo image -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/app_logo" />

    <RelativeLayout
        android:layout_width="377dp"
        android:layout_height="212dp"
        android:layout_below="@id/logo"
        android:background="@drawable/rounded_box"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="@dimen/paddingStart_15dp"
        android:paddingEnd="@dimen/paddingEnd_15dp">

        <!-- prima textview -->
        <TextView
            android:id="@+id/address_hint_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/marginTop_10dp"
            android:fontFamily="@font/gg_sans_bold"
            android:text="@string/shipment_address"
            android:textColor="@color/low_opacity_black"
            android:textSize="@dimen/textSize_20sp" />

        <!-- seconda edittext sotto la prima textview -->

        <!-- terza textview sotto l'edittext -->
        <EditText
            android:id="@+id/address_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_hint_text_view"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="@dimen/marginBottom_8dp"
            android:backgroundTint="@color/transparent_sky"
            android:gravity="center"
            android:hint="@string/shipment_placeholder"
            android:inputType="text"
            android:padding="@dimen/padding_16dp"
            android:textSize="@dimen/textSize_14sp"
            android:textColor="@color/low_opacity_black" />

        <TextView
            android:id="@+id/attention_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_edit_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/marginTop_20dp"
            android:layout_marginBottom="@dimen/marginBottom_18dp"
            android:fontFamily="@font/gg_sans_regular"
            android:text="@string/payment_desc"
            android:textColor="@color/low_opacity_black"
            android:textSize="@dimen/textSize_14sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_to_homepage_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/back_btn_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:backgroundTint="@color/transparent_sky"
            android:fontFamily="@font/gg_sans_regular"/>

        <Button
            android:id="@+id/buy"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEnd_10dp"
            android:layout_marginHorizontal="8dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:backgroundTint="@color/transparent_sky"
            android:fontFamily="@font/gg_sans_regular"
            android:text="@string/buy_btn" />
    </LinearLayout>

</RelativeLayout>