<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/bg_image"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacts"
        android:textSize="@dimen/textSizeTitle"
        android:textColor="@color/white"
        android:fontFamily="@font/gg_sans_bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/marginTop_16dp"
        android:layout_marginBottom="@dimen/marginBottom_16dp"
        android:padding="@dimen/padding_16dp"/>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        style="?attr/searchViewStyle"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="@dimen/marginBottom_10dp"
        android:background="@drawable/rounded_box"
        android:elevation="3dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:focusedByDefault="false"
        android:hint="@string/search_placeholder"
        android:inputType="text"
        android:queryHint="@string/search_placeholder"
        app:iconifiedByDefault="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="350dp"
        android:layout_height="@dimen/height_0dp"
        android:paddingHorizontal="@dimen/padding_10dp"
        android:layout_marginTop="@dimen/marginBottom_10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="3dp"
        android:contentDescription="@string/back_btn"
        android:scaleType="centerInside"
        android:src="@drawable/back_icon"
        app:backgroundTint="@color/transparent_sky"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>
