<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/padding_16dp"
    android:background="@drawable/bg_image"
    tools:context=".ui.LoginPageActivity">

    <!-- Container for logo and buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <!-- Logo image -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/img_width_for_signin"
            android:layout_height="@dimen/img_height_for_signin"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/marginBottom_16dp"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/app_logo" />

        <!-- ViewFlipper to handle login and sign-in visibility -->
        <ViewFlipper
            android:id="@+id/view_flipper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Buttons Container -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="145dp"
                android:background="@drawable/rounded_box_login"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/signin_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginTop_16dp"
                    android:fontFamily="@font/gg_sans_regular"
                    android:text="@string/login_btn"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/transparent_sky"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/back_to_homepage_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginTop_16dp"
                    android:fontFamily="@font/gg_sans_regular"
                    android:text="@string/back_btn_text"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/transparent_sky"
                    android:textColor="@color/white" />
            </LinearLayout>

            <!-- Sign-in Fields -->
            <LinearLayout
                android:id="@+id/signin_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_box_login"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayoutStyle"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gg_sans_regular"
                    android:background="@android:color/transparent"
                    android:gravity="center_horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_username"
                        style="@style/CustomEditTextStyle"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/username"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/CustomTextInputLayoutStyle"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center_horizontal"
                    android:fontFamily="@font/gg_sans_regular"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signin_password"
                        style="@style/CustomEditTextStyle"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/signin_submit_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginTop_16dp"
                    android:fontFamily="@font/gg_sans_regular"
                    android:text="@string/login_btn"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/transparent_sky"
                    android:textColor="@color/white" />

                <!-- Back to Selection Button -->
                <Button
                    android:id="@+id/signin_back_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginTop_16dp"
                    android:fontFamily="@font/gg_sans_regular"
                    android:text="@string/back_btn_text"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/transparent_sky"
                    android:textColor="@color/white" />

                <!-- Back to Film Button -->
                <Button
                    android:id="@+id/signin_back_to_homepage_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginTop_16dp"
                    android:fontFamily="@font/gg_sans_regular"
                    android:text="@string/back_btn_text"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/transparent_sky"
                    android:textColor="@color/white" />
            </LinearLayout>

        </ViewFlipper>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
