<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image"
    android:gravity="center_horizontal"
    android:padding="0dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/app_logo" />

    <RelativeLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_box"
        android:layout_centerHorizontal="true"
        android:paddingStart="@dimen/paddingStart_15dp"
        android:paddingEnd="@dimen/paddingEnd_15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/succes_image"
            android:layout_centerHorizontal="true">

            <!-- imageview sopra -->
            <ImageView
                android:id="@+id/success"
                android:layout_width="146dp"
                android:layout_height="82dp"
                android:layout_marginTop="@dimen/marginTop_8dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/success_icon"
                android:tint="@color/transparent_sky"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="X"
                android:fontFamily="@font/gg_sans_bold"
                android:textSize="@dimen/textSize_20sp"/>

            <ImageView
                android:id="@+id/final_captured_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/marginTop_8dp"/>

        </LinearLayout>

        <!-- prima textview sotto la imageview -->
        <TextView
            android:id="@+id/address_hint_text_view"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/succes_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/marginTop_8dp"
            android:fontFamily="@font/gg_sans_bold"
            android:gravity="center"
            android:text="@string/final_thanks"
            android:textColor="@color/low_opacity_black"
            android:textSize="@dimen/textSize_20sp" />

        <!-- seconda textview sotto la prima -->
        <TextView
            android:id="@+id/attention_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/address_hint_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/marginTop_20dp"
            android:layout_marginBottom="@dimen/marginBottom_20dp"
            android:fontFamily="@font/gg_sans_regular"
            android:gravity="center"
            android:text="@string/delivery_desc"
            android:textColor="@color/low_opacity_black"
            android:textSize="@dimen/textSize_18sp" />

    </RelativeLayout>


    <Button
        android:id="@+id/action_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/homepage_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/marginBottom_4dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:backgroundTint="@color/transparent_sky"
        android:fontFamily="@font/gg_sans_regular"/>

</RelativeLayout>
